syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.avegao.iot.fronius";
option java_outer_classname = "IotFroniusProto";
option objc_class_prefix = "RTG";

package iot_fronius;

service Fronius {
    rpc InsertCurrentDataPowerflow (Powerflow) returns (SuccessResponse);
    rpc InsertCurrentDataMeter (CurrenDataMeterRequest) returns (SuccessResponse);
    rpc InsertCurrentDataInverter (CurrenDataInverterRequest) returns (SuccessResponse);
    rpc InsertCurrentIoState (CurrentIoState) returns (SuccessResponse);

    rpc FindDataMeterByDate (FindByDateParameters) returns (GetDataMeterResponseArray);
}

message SuccessResponse {
    bool success = 1;
}

message Powerflow {
    SitePowerflow site = 1;
    repeated InverterPowerflow inverter = 2;
    repeated OhmpilotPowerflow ohmpilot = 3;
}

message SitePowerflow {
    string mode = 1;
    bool batteryStandby = 2;
    bool backupMode = 3;
    double powerFromGrid = 4;
    double powerLoad = 5;
    double powerAkku = 6;
    double powerFromPv = 7;
    uint32 relativeSelfConsumption = 8;
    uint32 relativeAutonomy = 9;
    string meterLocation = 10;
    double energyDay = 11;
    double energyYear = 12;
    double energyTotal = 13;
}

message InverterPowerflow {
    string batteryMode = 1;
    uint32 deviceType = 2;
    double energyDay = 3;
    double energyYear = 4;
    double energyTotal = 5;
    double currentPower = 6;
    uint32 soc = 7;
}

message OhmpilotPowerflow {
    double powerAcTotal = 1;
    string state = 2;
    double temperature = 3;
}

message CurrentDataMeter {
    double currentAcPhase1 = 1;
    double currentAcPhase2 = 2;
    double currentAcPhase3 = 3;
    double currentAcSum = 4;
    MeterDetails meterDetails = 5;
    bool enable = 6;
    uint32 energyReactiveVArAcPhase1Consumed = 7;
    uint32 energyReactiveVArAcPhase1Produced = 8;
    uint32 energyReactiveVArAcPhase2Consumed = 9;
    uint32 energyReactiveVArAcPhase2Produced = 10;
    uint32 energyReactiveVArAcPhase3Consumed = 11;
    uint32 energyReactiveVArAcPhase3Produced = 12;
    uint32 energyReactiveVArAcSumConsumed = 13;
    uint32 energyReactiveVArAcSumProduced = 14;
    uint32 energyRealWAcMinusAbsolute = 15;
    uint32 energyRealWAcPhase1Consumed = 16;
    uint32 energyRealWAcPhase1Produced = 17;
    uint32 energyRealWAcPhase2Consumed = 18;
    uint32 energyRealWAcPhase2Produced = 19;
    uint32 energyRealWAcPhase3Consumed = 20;
    uint32 energyRealWAcPhase3Produced = 21;
    uint32 energyRealWAcPlusAbsolute = 22;
    uint32 energyRealWAcSumConsumed = 23;
    uint32 energyRealWAcSumProduced = 24;
    double frequencyPhaseAverage = 25;
    uint32 meterLocationCurrent = 26;
    double powerApparentSPhase1 = 27;
    double powerApparentSPhase2 = 28;
    double powerApparentSPhase3 = 29;
    double powerApparentSSum = 30;
    double powerFactorPhase1 = 31;
    double powerFactorPhase2 = 32;
    double powerFactorPhase3 = 33;
    double powerFactorSum = 34;
    double powerReactiveQPhase1 = 35;
    double powerReactiveQPhase2 = 36;
    double powerReactiveQPhase3 = 37;
    double powerReactiveQSum = 38;
    double powerRealPPhase1 = 39;
    double powerRealPPhase2 = 40;
    double powerRealPPhase3 = 41;
    double powerRealPSum = 42;
    int64 timestamp = 43;
    bool visible = 44;
    double voltageAcPhase1 = 45;
    double voltageAcPhase2 = 46;
    double voltageAcPhase3 = 47;
}

message MeterDetails {
    string manufacturer = 1;
    string model = 2;
    string serial = 3;
}

message CurrenDataMeterRequest {
    repeated CurrentDataMeter elements = 1;
}

message CurrenDataInverterRequest {
    repeated int32 dayEnergy = 1;
    repeated int32 pac = 2;
    repeated int32 totalEnergy = 3;
    repeated int32 yearEnergy = 4;
    int64 timestamp = 5;
}

message CurrentIoState {
    repeated IoStatePin pins = 1;
}

message IoStatePin {
    int32 pinNumber = 1;
    string function = 2;
    string type = 3;
    string direction = 4;
    bool set = 5;
}

message FindByDateParameters {
    int64 startDate = 1;
    int64 endDate = 2;
}

message GetDataMeterResponseArray {
    repeated GetDataMeterResponse data = 1;
}

message GetDataMeterResponse {
    uint64 id = 1;
    double currentAcPhase1 = 2;
    double currentAcPhase2 = 3;
    double currentAcPhase3 = 4;
    double currentAcSum = 5;
    uint32 energyReactiveVArAcPhase1Consumed = 6;
    uint32 energyReactiveVArAcPhase1Produced = 7;
    uint32 energyReactiveVArAcPhase2Consumed = 8;
    uint32 energyReactiveVArAcPhase2Produced = 9;
    uint32 energyReactiveVArAcPhase3Consumed = 10;
    uint32 energyReactiveVArAcPhase3Produced = 11;
    uint32 energyReactiveVArAcSumConsumed = 12;
    uint32 energyReactiveVArAcSumProduced = 13;
    uint32 energyRealWAcMinusAbsolute = 14;
    uint32 energyRealWAcPhase1Consumed = 15;
    uint32 energyRealWAcPhase1Produced = 16;
    uint32 energyRealWAcPhase2Consumed = 17;
    uint32 energyRealWAcPhase2Produced = 18;
    uint32 energyRealWAcPhase3Consumed = 19;
    uint32 energyRealWAcPhase3Produced = 20;
    uint32 energyRealWAcPlusAbsolute = 21;
    uint32 energyRealWAcSumConsumed = 22;
    uint32 energyRealWAcSumProduced = 23;
    double frequencyPhaseAverage = 24;
    double powerApparentSPhase1 = 25;
    double powerApparentSPhase2 = 26;
    double powerApparentSPhase3 = 27;
    double powerApparentSSum = 28;
    double powerFactorPhase1 = 29;
    double powerFactorPhase2 = 30;
    double powerFactorPhase3 = 31;
    double powerFactorSum = 32;
    double powerReactiveQPhase1 = 33;
    double powerReactiveQPhase2 = 34;
    double powerReactiveQPhase3 = 35;
    double powerReactiveQSum = 36;
    double powerRealPPhase1 = 37;
    double powerRealPPhase2 = 38;
    double powerRealPPhase3 = 39;
    double powerRealPSum = 40;
    int64 timestamp = 41;
    double voltageAcPhase1 = 42;
    double voltageAcPhase2 = 43;
    double voltageAcPhase3 = 44;
}
